# sentinel

./: .gitignore  CONTRIBUTING.md  README.md  README.zh.md  WHITEPAPER.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
benchmark/: __init__.py  commerce_scenarios.py  corpus.py  runner.py
configs/: default-policy.json  guardteam.json
deploy/: Dockerfile  README.md  docker-compose.yml
docs/: DEMO_SCRIPT.md  GOAI_INFRA_PROPOSAL.md  HOW_TO_SUBMIT.md  SUBMISSION.md  初赛-作品简介.txt
examples/: agentic_shop_server.py  case_fraud.json  case_held.json  case_legit.json  claims_batch.jsonl  commerce_demo.py  demo.py  guardteam_demo.py  guardteam_llm_demo.py  malicious_server.py  payment_demo.py  real_server.py
guardteam/: __init__.py  __main__.py  brain.py  claude_brain.py  ledger.py  mcp_server.py  report.py  screening.py  skills.py  team.py
src/mcp_sentinel/: __init__.py  actions.py  audit.py  commerce.py  detector.py  policy.py  provenance.py  proxy.py  sentinel.py  types.py
tests/: test_cli.py  test_guardteam.py  test_ledger.py  test_sentinel.py
tests/integration/: test_payment_provenance.py  test_real_mcp.py  test_skills_mcp.py
web/: guardteam.html  index.html  onepager-zh.html  pitch.html  sample-report.html
