[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sentinel"
version = "0.1.0"
description = "A security & reliability gateway for the Model Context Protocol: prompt-injection detection, least-privilege policy, and audit logging for AI agent tool calls."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["mcp", "ai-agents", "prompt-injection", "security", "llm", "agent-infra"]
authors = [{ name = "MCP Sentinel contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
# Zero runtime dependencies — stdlib only, so it clones-and-runs anywhere.
dependencies = []

# The official MCP SDK is only needed to run the live integration tests; the
# core library, demos, and benchmark have no third-party dependencies.
[project.optional-dependencies]
test = ["mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/OWNER/mcp-sentinel"
Issues = "https://github.com/OWNER/mcp-sentinel/issues"

[project.scripts]
mcp-sentinel = "mcp_sentinel.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sentinel"]

[tool.hatch.envs.default.scripts]
test = "python -m unittest discover -s tests -v"
bench = "python -m benchmark.runner"
